--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "koa-api-dictionary application",
   "main": "index.js",
   "dependencies": {
-    "koa": "^0.13.0"
+    "koa": "^0.13.0",
+    "koa-mount": "^1.3.0",
+    "koa-router": "^3.5.0"
   },
   "devDependencies": {},
   "scripts": {
