--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "koa-api-dictionary application",
   "main": "index.js",
   "dependencies": {
+    "co-monk": "^1.0.0",
     "koa": "^0.13.0",
     "koa-mount": "^1.3.0",
-    "koa-router": "^3.5.0"
+    "koa-router": "^3.5.0",
+    "monk": "^0.9.0"
   },
   "devDependencies": {},
   "scripts": {
