--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "co-monk": "^1.0.0",
     "koa": "^0.13.0",
     "koa-better-ratelimit": "^2.0.1",
+    "koa-compress": "^1.0.8",
     "koa-logger": "^1.2.2",
     "koa-mount": "^1.3.0",
     "koa-router": "^3.5.0",
