--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "koa-router": "^3.5.0",
     "monk": "^0.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^2.0.1",
+    "should": "^4.1.0",
+    "supertest": "^0.14.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --require should --reporter nyan --harmony --bail api/test.js"
   },
   "repository": {
     "type": "git",
